# Dx_AI_Studio

./: .env.example  .gitignore  README.md  build-web.bat  start-web.bat
backend/: pyproject.toml
backend/app/: __init__.py  main.py  web.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  db.py
backend/app/modules/executions/: routes.py  service.py
backend/app/modules/health/: routes.py
backend/app/modules/projects/: repository.py  routes.py  service.py
backend/app/schemas/: canvas.py  execution.py  project.py
backend/tests/: test_execution_smoke.py
docs/: M0_ARCHITECTURE.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/app/router/: AppRouter.tsx
frontend/src/entities/execution/: api.ts
frontend/src/entities/project/: api.ts
frontend/src/features/canvas/: CanvasContextMenu.tsx  canvas-core.ts  (+22 more)
frontend/src/styles/: canvas.css  floating-editor.css  image-node.css  minimap.css  responsive.css  text-node.css
scripts/: build-web.ps1  start-web.ps1
tapnow-clone-redesign/: editor.html  index.html
tapnow-clone-redesign/backend/: README.md
tapnow-clone-redesign/design/: EXECUTION_ACCEPTANCE_CHECKLIST.md  EXECUTION_PHASE_DELIVERY.md  PROJECT_STRUCTURE.md  STAGE1_REFERENCE_AUDIT.md  STAGE2_EDITOR_DEDUP.md  STAGE3_EDITOR_DASHBOARD_DECOUPLE.md  STAGE4_5_6_WRAPUP.md  STAGE7_10_DELIVERY.md
tapnow-clone-redesign/legacy/root-runtime/: app-v2.js  dashboard.css  dashboard.js  editor-bridge.js  project-store.js  script.js  style.css
(+57 files in other folders)
